# SAJU_30days_Linux

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  LICENSE  QUICK_START.md  README.md  README_GITHUB.md  package.json  pnpm-lock.yaml  start.sh  stop.sh  test-pipeline.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/worker/: package.json
apps/worker/src/: index.ts
apps/worker/src/queues/: pipeline.ts
apps/worker/src/services/: subtitle.service.ts  tts.service.ts  youtube.service.ts
curriculum/: 30day.yaml
docs/: API.md  DEPLOYMENT.md
infra/: docker-compose.yml
services/api/: main.py  pyproject.toml
services/api/interpret/: claude_client.py
services/api/saju/: __init__.py  constants.py  engine.py  mock_engine.py
