[project]
name = "saju-api"
version = "1.0.0"
description = "Saju calculation engine and orchestration API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sxtwl>=2.0.6",
    "korean-lunar-calendar>=0.3.1",
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100